--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -134,6 +134,7 @@ body {
 }
 
 * {
+  -webkit-tap-highlight-color: transparent;
   font-family: var(--font-base);
   @include mixins.custom-scrollbar;
 }
