--- a/frontend/src/app/shared/dialog-faculty-login/dialog-faculty-login.component.html
+++ b/frontend/src/app/shared/dialog-faculty-login/dialog-faculty-login.component.html
@@ -1,10 +1,14 @@
-<div class="dialog-login-container">
+<div class="dialog-login-container" role="dialog" aria-labelledby="dialogTitle">
   <!--Dialog Title-->
   <div class="dialog-login-title">
-    <h1 class="title-text">Faculty Login</h1>
+    <div class="title-text" id="dialogTitle">
+      <span mat-symbol="group" class="faculty-icon" aria-hidden="true"> </span>
+      <span>Faculty Login</span>
+    </div>
     <p class="title-desc">Enter your account email and password to start.</p>
   </div>
 
+  <!--Health Status Message-->
   <div class="health-message-container">
     <span mat-symbol="wifi_tethering_off"></span>
     <p class="message-text">
@@ -14,113 +18,98 @@
   </div>
 
   <!--Dialog Form-->
-  <div class="dialog-login-content">
-    <form [formGroup]="loginForm" (ngSubmit)="onSubmit()">
-      <div class="field-container">
-        <div class="input-container">
-          <span
-            mat-symbol="email"
-            class="input-icon"
-            [matTooltip]="'Email Address'"
-          ></span>
-          <input
-            type="email"
-            placeholder="Email Address"
-            class="login-input"
-            id="email"
-            formControlName="email"
-            autocomplete="email"
-          />
-        </div>
-        @if (email && email.invalid && (email.dirty || email.touched)) {
-        <div
-          class="error-message slide-down"
-          [ngClass]="{ show: email.invalid }"
+  <form
+    class="dialog-login-form"
+    [formGroup]="loginForm"
+    (ngSubmit)="onSubmit()"
+    aria-describedby="formInstructions">
+    <div class="form-content">
+      <!--Email-->
+      <mat-form-field appearance="fill">
+        <mat-label for="emailInput">Email Address</mat-label>
+        <mat-icon matPrefix class="prefix-icon" aria-hidden="true"
+          >mail</mat-icon
         >
-          <span mat-symbol="error"></span>
-          @if (email.errors?.['required']) {
-          <span>Email is required.</span>
-          } @if (email.errors?.['email']) {
-          <span>Please enter a valid email address.</span>
-          }
-        </div>
-        }
-      </div>
-
-      <div class="field-container">
-        <div class="input-container">
-          <span
-            mat-symbol="lock"
-            class="input-icon"
-            [matTooltip]="'Account Password'"
-          ></span>
-          <input
-            [type]="showPassword ? 'text' : 'password'"
-            placeholder="Password"
-            class="login-input"
-            id="password"
-            formControlName="password"
-            autocomplete="current-password"
-            minlength="8"
-            maxlength="40"
-          />
-          @if (passwordHasValue) {
-          <mat-icon
-            matRipple
-            class="password-visibility-toggle"
-            (click)="togglePasswordVisibility()"
-          >
-            {{ showPassword ? "visibility_off" : "visibility" }}
-          </mat-icon>
-          }
-        </div>
-
-        @if (password && password.invalid && (password.dirty ||
-        password.touched)) {
-        <div
-          class="error-message slide-down"
-          [ngClass]="{ show: password.invalid }"
+        <input
+          matInput
+          type="email"
+          formControlName="email"
+          autocomplete="email"
+          id="emailInput"
+          aria-required="true"
+          aria-describedby="emailErrors" />
+        @if (email?.errors?.['required']) {
+        <mat-error id="emailErrors">Email is required.</mat-error>
+        } @if (email?.errors?.['email']) {
+        <mat-error id="emailErrors"
+          >Please enter a valid email address.</mat-error
         >
-          <span mat-symbol="error"></span>
-          @if (password.errors?.['required']) {
-          <span>Account Password is required.</span>
-          } @if (password.errors?.['minlength']) {
-          <span>Password is too short.</span>
-          } @if (password.errors?.['maxlength']) {
-          <span>Password is too long.</span>
-          }
-        </div>
         }
-      </div>
+      </mat-form-field>
 
-      <!--Dialog Actions-->
+      <!--Password-->
+      <mat-form-field appearance="fill">
+        <mat-label for="passwordInput">Password</mat-label>
+        <mat-icon matPrefix class="prefix-icon" aria-hidden="true"
+          >lock</mat-icon
+        >
+        <input
+          matInput
+          [type]="showPassword ? 'text' : 'password'"
+          formControlName="password"
+          autocomplete="current-password"
+          minlength="8"
+          maxlength="40"
+          id="passwordInput"
+          aria-required="true"
+          aria-describedby="passwordErrors" />
+        @if (passwordHasValue) {
+        <button
+          mat-icon-button
+          matSuffix
+          (click)="togglePasswordVisibility()"
+          type="button"
+          [attr.aria-label]="showPassword ? 'Hide password' : 'Show password'">
+          <mat-icon aria-hidden="true">{{
+            showPassword ? 'visibility_off' : 'visibility'
+          }}</mat-icon>
+        </button>
+        } @if (password?.errors?.['required']) {
+        <mat-error id="passwordErrors">Account Password is required.</mat-error>
+        } @if (password?.errors?.['minlength']) {
+        <mat-error id="passwordErrors">Password is too short.</mat-error>
+        } @if (password?.errors?.['maxlength']) {
+        <mat-error id="passwordErrors">Password is too long.</mat-error>
+        }
+      </mat-form-field>
+
+      <!--Actions-->
       <div class="dialog-login-actions">
         <button
           mat-button
           class="close-button"
           type="button"
           (click)="onCloseClick()"
-        >
+          aria-label="Close dialog">
           Close
         </button>
         <button
           mat-flat-button
+          color="primary"
           class="login-button"
-          [ngClass]="{
-            'button-disabled': isLoading || loginForm.invalid
-          }"
+          [class.button-disabled]="loginForm.invalid || isLoading"
           [disabled]="loginForm.invalid || isLoading"
           type="submit"
-        >
-          @if(!isLoading){ Log In } @if(isLoading) {
+          aria-label="Log in">
+          @if (!isLoading) { Log In } @if (isLoading) {
           <mat-spinner
             class="custom-spinner"
             diameter="25"
             strokeWidth="2.5"
-          ></mat-spinner
-          >}
+            aria-label="Loading"></mat-spinner>
+          }
         </button>
       </div>
-    </form>
-  </div>
+    </div>
+  </form>
 </div>
