fix dialog login styling

--- a/frontend/src/app/shared/dialog-faculty-login/dialog-faculty-login.component.html
+++ b/frontend/src/app/shared/dialog-faculty-login/dialog-faculty-login.component.html
@@ -5,7 +5,7 @@
       <span mat-symbol="group" class="faculty-icon" aria-hidden="true"> </span>
       <span>Faculty Login</span>
     </div>
-    <p class="title-desc">Enter your account email and password to start.</p>
+    <p class="title-desc">Enter your email and password to start.</p>
   </div>
 
   <!--Health Status Message-->
