--- a/frontend/src/app/shared/dialog-admin-login/dialog-admin-login.component.scss
+++ b/frontend/src/app/shared/dialog-admin-login/dialog-admin-login.component.scss
@@ -24,7 +24,7 @@
     $gap: var(--spacing-lg)
   );
   padding: var(--spacing-lgx);
-  min-width: var(--dialog-smx);
+  max-width: var(--dialog-smx);
 }
 
 .dialog-login-title {
@@ -59,6 +59,7 @@
 
 .dialog-login-form {
   width: 100%;
+  min-width: var(--dialog-smx);
 
   .form-content {
     @include mixins.flex-layout(
